--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,15 +10,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@3105fb18c05ddd93efea5f9e0bef7a03a6e9e7df
       with:
         python-version: 3.x
+
     - name: Find pip cache dir
       id: pip-cache
       run: echo "::set-output name=dir::$(pip cache dir)"
 
     - name: pip cache
-      uses: actions/cache@v2
+      uses: actions/cache@26968a09c0ea4f3e233fdddbafd1166051a095f6
       with:
         # Use the os dependent pip cache directory found above
         path: ${{ steps.pip-cache.outputs.dir }}
@@ -28,9 +29,7 @@ jobs:
         restore-keys: ${{ runner.os }}-pip-
 
     - name: Clone
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: '0'
+      uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
 
     - name: Determine publication type
       id: pubtype
@@ -45,34 +44,34 @@ jobs:
 
     - name: Make release
       id: makerel
-      uses: actions/create-release@v1
+      uses: actions/create-release@0cb9c9b65d5d1901c1f53e5e66eaf4afd303e70e
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: v${{ steps.getver.outputs.spec_version }}
         release_name: v${{ steps.getver.outputs.spec_version }}
+        body: Specification release v${{ steps.getver.outputs.spec_version }}
 
     - name: Build specification
       run: |
         python -m pip install bikeshed
-        make
-        mkdir build && mv tuf-spec.html build/index.html
+        mkdir build && cd build
+        make -f ../Makefile release
 
-    - name: Publish release to latest
-      uses: JamesIves/github-pages-deploy-action@3.7.1
+    - name: Switch branch
+      uses: actions/checkout@5a4ac9002d0be2fb38bd78e4b4dbde5606d7042f
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        folder: build
-        base_branch: ${{ steps.pubtype.outputs.branch }}
-        target_folder: ${{ steps.getver.outputs.spec_version }}
+        ref: gh-pages
         clean: false
-        branch: gh-pages
 
-    - name: Publish versioned release
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        folder: build
-        base_branch: ${{ steps.pubtype.outputs.branch }}
-        clean: false
-        branch: gh-pages
+    - name: Push generated specification
+      run: |
+        git config user.name "TUF Specification Automation"
+        git config user.email tuf-spec-bot@example.com
+        rm -fr latest
+        mv build/* .
+        rmdir build
+        make index
+        git add .
+        git commit -m "Publish latest specification"
+        git push
